--- a/portfolio.html
+++ b/portfolio.html
@@ -78,18 +78,18 @@
               <li class="grid-item">
                 <div>
                   <a class="projects-link" href="#">
-                    <div>
+                    <div class="card-hover">
                       <img
                         class="picture projects-img"
                         src="./images-portfolio/technokrjak.jpg"
                         width="370"
                         alt="технокряк веб-сайт"
-                      />
-                      <!-- <p>
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p> -->
+                        />
+                          <p class="hover-text">
+                        Технокряк это современная площадка распространения
+                        коронавируса. Компании используют эту платформу для
+                        цифрового шпионажа и атак на защищённые сервера конкурентов.
+                          </p>
                     </div>
                     <div class="text">
                       <h2 class="projects-title">Технокряк</h2>
