--- a/index.html
+++ b/index.html
@@ -124,13 +124,15 @@
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="work list">
             <li class="item">
-              <img
+              <div class="item-position">
+                <img
                 class="picture"
                 src="./img/desktop.jpg"
                 alt="ноутбук"
                 width="370"
               />
               <h3 class="title">Десктопные приложения</h3>
+            </div>
             </li>
             <li class="item">
               <img
