--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             Эффективные решения <br />
             для вашего бизнеса
           </h1>
-          <button type="button" class="button">Заказать услугу</button>
+          <button data-modal-open type="button" class="button">Заказать услугу</button>
         </div>
       </section>
 
@@ -453,5 +453,19 @@
         </div>
       </div>
     </footer>
+    <!-- backdrop -->
+    <div class="backdrop is-hidden" data-modal>
+
+      <div class="modal">
+          <button data-modal-close class="btn-close">
+            <svg width="18"
+            height="18">
+              <use href="./img/symbol-defs111.svg#icon-close"></use>
+            </svg>
+          </button>
+      </div>
+  </div>
+
+  <script src="./js/modal.js"></script>
   </body>
 </html>
