--- a/portfolio.html
+++ b/portfolio.html
@@ -289,24 +289,21 @@
                 ><svg class="icon" width="20" height="20">
                   <use
                     href="./img/symbol-defs111.svg#icon-twitter-1"
-                  ></use></svg
-              ></a>
+                  ></use></svg></a>
             </li>
             <li class="list-item">
               <a href="" aria-label="Ссылка на Facebook" class="link"
                 ><svg class="icon" width="20" height="20">
                   <use
                     href="./img/symbol-defs111.svg#icon-facebook1"
-                  ></use></svg
-              ></a>
+                  ></use></svg></a>
             </li>
             <li class="list-item">
               <a href="" aria-label="Ссылка на Linkedin" class="link"
                 ><svg class="icon" width="20" height="20">
                   <use
                     href="./img/symbol-defs111.svg#icon-linkedin1"
-                  ></use></svg
-              ></a>
+                  ></use></svg></a>
             </li>
           </ul>
         </div>
