--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
       </div>
     </footer>
     <!-- backdrop -->
-    <div class="backdrop is-hidden" data-modal>
+    <div data-modal class="backdrop is-hidden">
 
       <div class="modal">
           <button data-modal-close class="btn-close">
